--- a/obodo_task/android/app/src/main/AndroidManifest.xml
+++ b/obodo_task/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.obodo.obodo_task">
-   <application
+    package="com.obodo.taskapp">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <application
         android:label="obodo_task"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
-            android:name=".MainActivity"
+            android:name="com.obodo.taskapp.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
