--- a/obodo_task/pubspec.yaml
+++ b/obodo_task/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^3.3.0
   provider: ^6.0.3
   nanoid: ^1.0.0
+  shared_preferences: ^2.0.15
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
